# cargo-edit

./: aliases.js  search-index.js  settings.html  source-files.js
cargo_add/: index.html
cargo_edit/: enum.ErrorKind.html  struct.CrateName.html  struct.Dependency.html  struct.Error.html  struct.LocalManifest.html  struct.Manifest.html
cargo_metadata/: enum.CargoOpt.html  enum.DependencyKind.html  enum.ErrorKind.html  struct.Dependency.html  struct.Error.html  struct.Metadata.html  struct.Node.html  struct.Package.html  struct.Resolve.html  struct.Target.html  struct.WorkspaceMember.html
cargo_rm/: index.html
cargo_upgrade/: index.html
crc/crc16/: constant.USB.html  constant.USB_TABLE.html  constant.X25.html  constant.X25_TABLE.html
crc/crc32/: constant.CASTAGNOLI.html  constant.CASTAGNOLI_TABLE.html  (+4 more)
env_proxy/: fn.for_url.html  fn.for_url_str.html  index.html  struct.ProxyUrl.html
itertools/: enum.Diff.html  enum.Either.html  enum.EitherOrBoth.html  enum.FoldWhile.html  enum.MinMaxResult.html  enum.Position.html
pad/: all.html  enum.Alignment.html  index.html  trait.PadStr.html
semver/: enum.Identifier.html  struct.Version.html  struct.VersionReq.html
src/: dependency.rs
tests/: cargo-add.rs
tests/fixtures/github/flier/rust-cfile/: Cargo.toml
tests/fixtures/github/roy-ganz/mysql_enum/: Cargo.toml
tests/fixtures/github/susytech/susy-common/: Cargo.toml
toml_edit/: enum.Item.html  enum.Value.html  struct.Array.html  struct.ArrayOfTables.html  struct.Document.html  struct.InlineTable.html  struct.Key.html  struct.Table.html  struct.TomlError.html
(+488 files in other folders)
